# stack

./: .gitignore  CMakeLists.txt  README.md  makefile
src/: CMakeLists.txt  logging.hpp  stack.cpp  stack.h  stack.hpp  stack_ext_func.hpp  stack_external_functions.hpp  stack_internal_functions.hpp  stack_itern_func.hpp  stack_log.h  stack_type_funcs.cpp  type_print.cpp
src/include/: stack.h
stack_test/: CMakeLists.txt  makefile  test.cpp
